src/test/deca/syntax/valid/provided/symbole.deca
// Description:
//    Programme utilisant le point virgule correct à la fin.
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2022

{
        int x = 3;
        println(x);
}
