src/test/deca/syntax/invalid/provided/point_virgule.deca
/*/ Description:
//    Programme omettant le point virgule.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe
//
// Historique:
//    cree le 01/01/2022*/

{
        println("Hello")
}
